Using routeProvider and designing login page

--- a/index.html
+++ b/index.html
@@ -12,120 +12,9 @@
     <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
     <meta name="viewport" content="initial-scale=1" />
   </head>
-  <body layout="column" ng-controller="kanbanController">
-    <!-- Toolbar -->
-    <md-toolbar layout="row">
-      <div class="md-toolbar-tools">
-        <md-button class="md-icon-button" aria-label="Settings" ng-click='toggleLeft()'>
-          <md-icon md-svg-icon="img/icons/ic_menu_white_24px.svg"></md-icon>
-        </md-button>
-        <h2>
-          <span>TaskBan</span>
-        </h2>
-        <span flex></span>
-        <md-button class="md-icon-button" aria-label="AddNewCard" ng-click="AddNewCardDialog($event)">
-          <md-icon md-svg-icon="img/icons/ic_add_white_24px.svg"></md-icon>
-        </md-button>
-        <md-button class="md-icon-button" aria-label="More">
-          <md-icon md-svg-icon="img/icons/ic_more_vert_white_24px.svg"></md-icon>
-        </md-button>
-      </div>
-    </md-toolbar>
-    <!-- Kanban board -->
-    <div layout="row" class='kanban'>
-      <!-- Left sidenav -->
-      <md-sidenav layout="column" class="md-sidenav-left md-whiteframe-z2" md-component-id="left">
-        <md-toolbar class="md-theme-light">
-          <h1 class="md-toolbar-tools">User information</h1>
-        </md-toolbar>
-      </md-sidenav>
-      <!-- Ready cards -->
-      <div class='ready'>
-        <md-whiteframe class="md-whiteframe-1dp" layout layout-align="center center" id='ready-title'>
-          <h3>To do</h3>
-        </md-whiteframe>
-        <md-list dragula="'first-bag'" dragula-model='readyCards'>
-          <md-card class='ready-card' ng-repeat='card in readyCards'>
-            <md-card-content ng-bind='card.cardContent'></md-card-content>
-          </md-card>
-        </md-list>
-      </div>
-      <!-- In progress cards -->
-      <div class='inprogress'>
-        <md-whiteframe class="md-whiteframe-1dp" layout layout-align="center center" id='inprogress-title'>
-          <h3>In progress</h3>
-        </md-whiteframe>
-        <md-list dragula="'first-bag'" dragula-model='inprogressCards'>
-          <md-card class='inprogress-card' ng-repeat='card in inprogressCards'>
-            <md-card-content ng-bind='card.cardContent'></md-card-content>
-          </md-card>
-        </md-list>
-      </div>
-      <!-- Paused cards -->
-      <div class='paused'>
-        <md-whiteframe class="md-whiteframe-1dp" layout layout-align="center center" id='paused-title'>
-          <h3>Paused</h3>
-        </md-whiteframe>
-        <md-list dragula="'first-bag'" dragula-model='pausedCards'>
-          <md-card class='paused-card' ng-repeat='card in pausedCards'>
-            <md-card-content ng-bind='card.cardContent'></md-card-content>
-          </md-card>
-        </md-list>
-      </div>
-      <!-- Testing cards -->
-      <div class='testing'>
-        <md-whiteframe class="md-whiteframe-1dp" layout layout-align="center center" id='testing-title'>
-          <h3>Testing</h3>
-        </md-whiteframe>
-        <md-list dragula="'first-bag'" dragula-model='testingCards'>
-          <md-card class='testing-card' ng-repeat='card in testingCards'>
-            <md-card-content ng-bind='card.cardContent'></md-card-content>
-          </md-card>
-        </md-list>
-      </div>
-      <!-- Done cards -->
-      <div class='done'>
-        <md-whiteframe class="md-whiteframe-1dp" layout layout-align="center center" id='done-title'>
-          <h3>Done</h3>
-        </md-whiteframe>
-        <md-list dragula="'first-bag'" dragula-model='doneCards'>
-          <md-card class='done-card' ng-repeat='card in doneCards'>
-            <md-card-content ng-bind='card.cardContent'></md-card-content>
-          </md-card>
-        </md-list>
-      </div>
-    </div>
-    <!-- Custom dialog -->
-    <script type='text/ng-template' id='dialog1.tmpl.html'>
-      <md-dialog aria-label="Nueva tarjeta"  ng-cloak>
-        <form>
-        <md-toolbar>
-          <div class="md-toolbar-tools">
-            <h2>New task</h2>
-            <span flex></span>
-            <md-button class="md-icon-button" ng-click="cancel()">
-              <md-icon md-svg-src="img/icons/ic_clear_white_24px.svg" aria-label="Close dialog"></md-icon>
-            </md-button>
-          </div>
-        </md-toolbar>
-        <md-dialog-content style="max-width:800px;max-height:810px;min-width:300px;min-height:100px">
-          <div class="md-dialog-content">
-            <md-content layout-padding class="autoScroll">
-              <md-input-container>
-                <label>Description</label>
-                <input type="text" ng-model="inputDialog.description">
-              </md-input-container>
-            </md-content>
-          </div>
-        </md-dialog-content>
-        <div class="md-actions" layout="row">
-          <md-button ng-click="answer()">
-            OK
-          </md-button>
-        </div>
-        </form>
-      </md-dialog>
-    </script>
+  <body>
+    <!-- Actual view -->
+    <div style="height:100%" ng-view></div>
     <!-- Dependencies -->
     <script src='node_modules/angular/angular.js'></script>
     <script src='node_modules/angular-messages/angular-messages.js'></script>
@@ -133,8 +22,11 @@
     <script src='node_modules/angular-material/angular-material.js'></script>
     <script src='node_modules/angular-animate/angular-animate.js'></script>
     <script src='node_modules/angular-aria/angular-aria.js'></script>
+    <script src='node_modules/angular-route/angular-route.js'></script>
     <script src='app/app.js'></script>
     <script src='app/controllers/kanbanController.js'></script>
-    <script src="app/services/kanbanFactory.js"></script>
+    <script src='app/services/kanbanFactory.js'></script>
+    <script src='app/controllers/loginController.js'></script>
+    <script src='app/services/loginFactory.js'></script>
   </body>
 </html>
