--- a/index.html
+++ b/index.html
@@ -29,5 +29,6 @@
     <script src='app/controllers/registerController.js'></script>
     <script src='app/services/kanbanFactory.js'></script>
     <script src='app/services/userFactory.js'></script>
+    <script src='app/directives/rightClickDirective.js'></script>
   </body>
 </html>
