Updating Angular Material to show initial value in edit dialogs

--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
     <script src='node_modules/angular/angular.js'></script>
     <script src='node_modules/angular-messages/angular-messages.js'></script>
     <script src='node_modules/angular-dragula/dist/angular-dragula.js'></script>
-    <script src='node_modules/angular-material/angular-material.js'></script>
+    <!--<script src='node_modules/angular-material/angular-material.js'></script>-->
+    <script src='https://gitcdn.link/repo/angular/bower-material/master/angular-material.js'></script>
     <script src='node_modules/angular-animate/angular-animate.js'></script>
     <script src='node_modules/angular-aria/angular-aria.js'></script>
     <script src='node_modules/angular-route/angular-route.js'></script>
