Fixing login and register boxes style

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <title>TaskBan</title>
     <!-- Styles, fonts and favicon -->
     <link rel="shortcut icon" href="img/favicon.ico">
-    <link href='node_modules/angular-material/angular-material.css' rel='stylesheet' type='text/css'/>
+    <!--<link href='node_modules/angular-material/angular-material.css' rel='stylesheet' type='text/css'/>-->
+    <link href='https://gitcdn.link/repo/angular/bower-material/master/angular-material.css' rel='stylesheet' type='text/css'/>
     <link href='node_modules/angular-dragula/dist/dragula.css' rel='stylesheet' type='text/css'/>
     <link href='styles/style.css' rel='stylesheet' type='text/css'/>
     <link href='styles/animations.css' rel='stylesheet' type='text/css' />
